terminal seems to fully work now